<resources>
    <string name="app_name">Reader</string>
    <string name="sample_feed_url">www.example.com/feed</string>
    <string name="add_feed_by_url">Add feed by URL</string>
    <string name="feed_already_added">That feed has already been added.</string>
    <string name="settings">Settings</string>
    <string name="all_entries">All Entries</string>
    <string name="search_feeds">Search feeds</string>
    <string name="search_feeds...">Search feeds…</string>
    <string name="key_words">Enter keywords…</string>
    <string name="search">Search</string>
    <string name="feed_added_message">Subscribed to %s.</string>
    <string name="unsubscribed_message">Unsubscribed from %s.</string>
    <string name="loading">Loading…</string>
    <string name="failed_to_get_feed">Failed to get feed. Please try again.</string>
    <string name="failed_to_connect">Failed to connect to feed. Please retry later or enter the address manually.</string>
    <string name="view">View</string>
    <string name="last_updated">Updated %s</string>
    <string name="added">Added %s.</string>
    <string name="updated">Updated %s.</string>
    <string name="added_and_updated">Added %1$s and updated %2$d.</string>
    <string name="manage_feeds">Manage Feeds</string>
    <string name="select_all">Select All</string>
    <string name="sort">Sort</string>
    <string name="confirm">Confirm</string>
    <string name="edit_category">Edit Category</string>
    <string name="number_selected">%d selected</string>
    <string name="edit_category_dialog_message">Change will be applied to %s.</string>
    <string name="category">Category</string>
    <string name="category_assigned">Assigned category \'%1$s\' to %2$s.</string>
    <string name="done">Done</string>
    <string name="confirm_remove">Remove %s?</string>
    <string name="confirm_remove_dialog_message">
        This will remove all associated entries. You can subscribe again later if you change your mind.
    </string>
    <string name="feed">feed</string>
    <string name="sort_by">Sort by</string>
    <string name="recently_added">Recently added</string>
    <string name="title">Title</string>
    <string name="subscribe">Subscribe</string>
    <string name="view_in_browser">View in Browser</string>
    <string name="star">Star</string>
    <string name="unstar">Unstar</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="read">Read</string>
    <string name="mark_as_unread">Mark as Unread</string>
    <string name="filter">Filter</string>
    <string name="unread">Unread</string>
    <string name="starred">Starred</string>
    <string name="date_published">Date published</string>
    <string name="unread_on_top">Unread on top</string>
    <string name="remove_feed">Remove Feed</string>
    <string name="mark_all_as_read">Mark All as Read</string>
    <string name="star_all">Star All</string>
    <string name="visit_website">Visit Website</string>
    <string name="mark_all_as_unread">Mark All as Unread</string>
    <string name="unstar_all">Unstar All</string>
    <string name="add_feeds">Add Feeds</string>
    <string name="updating">Updating…</string>
    <string name="share">Share</string>
    <string name="import_successful">Import successful.</string>
    <string name="error_message">An error has occurred.</string>
    <string name="confirm_import_title">Import %s?</string>
    <string name="confirm_import_message">This will not overwrite existing subscriptions.</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="share_entry">Share Entry</string>
    <string name="copy_link">Copy Link</string>
    <string name="copied_link">Copied link to clipboard.</string>
    <string name="exported_message">Exported %s.</string>
    <string name="notification_channel_name">New Entries</string>
    <string name="new_entries_notification_title">New in %s</string>
    <string name="and_more">%s… and more</string>
    <string name="change_text_size">Change Text Size</string>
    <string name="text_size">Text Size</string>
    <string name="normal">Normal</string>
    <string name="large">Large</string>
    <string name="larger">Larger</string>
    <string name="no_items">No items found.</string>
    <string name="auto_update_on_launch">Auto-update on launch</string>
    <string name="auto_update_on_launch_description">Each feed will automatically check for updates when opened.</string>
    <string name="sort_entries_by">Sort entries by</string>
    <string name="notifications">Notifications</string>
    <string name="notification_switch_description">New entries</string>
    <string name="sort_feeds_by">Sort feeds by</string>
    <string name="unread_items">Unread items</string>
    <string name="starred_entries">Starred Entries</string>
    <string name="new_entries">New Entries</string>
    <string name="appearance">Appearance</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark </string>
    <string name="system_default">System default</string>
    <string name="more_options">More options</string>
    <string name="read_entries_in_app">Read entries in-app</string>
    <string name="read_entries_in_app_description">Switch off to use system browser instead.</string>
    <string name="feeds_and_entries">Feeds and Entries</string>
    <string name="subscription_limit_reached">Subscription limit reached.</string>
    <string name="enable_header_images">Enable header images</string>
    <string name="go">Go</string>
    <string name="reading">Reading</string>
    <string name="update_all">Update All</string>
    <string name="sync_in_bg">Sync in background</string>
    <string name="sync_in_bg_description">Subscriptions will update daily when app is closed.</string>
    <string name="url">URL</string>
    <string name="undo_changes">Undo Changes</string>
    <string name="saved_changes_to">Saved changes to %s.</string>
    <string name="request_canceled">Request canceled.</string>
    <string name="hashtag">#%s</string>
    <string name="news">News</string>
    <string name="politics">Politics</string>
    <string name="world">World</string>
    <string name="science">Science</string>
    <string name="tech">Tech</string>
    <string name="business">Business</string>
    <string name="art">Art</string>
    <string name="culture">Culture</string>
    <string name="books">Books</string>
    <string name="entertainment">Entertainment</string>
    <string name="feed_info">Feed Info</string>
    <string name="keep_old_unread">Keep old unread entries on update</string>
    <string name="keep_old_unread_description">Otherwise, all old entries will be deleted unless starred.</string>
    <string name="updating_all_feeds">Updating all feeds in the background.</string>

    <plurals name="numberOfEntries">
        <item quantity="one">%d entry</item>
        <item quantity="other">%d entries</item>
    </plurals>
    <plurals name="numberOfNewEntries">
        <item quantity="one">%d new entry</item>
        <item quantity="other">%d new entries</item>
    </plurals>
    <plurals name="numberOfFeeds">
        <item quantity="one">one feed</item>
        <item quantity="other">%d feeds</item>
    </plurals>

</resources>