<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <item
        android:icon="@drawable/ic_more_vert"
        android:title="@string/more_options"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_item_sort"
                android:icon="@drawable/ic_sort"
                android:title="@string/sort"
                app:showAsAction="never" />

            <item
                android:id="@+id/menu_item_add_feeds"
                android:icon="@drawable/ic_add"
                android:title="@string/add_feeds"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>