<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sort_by"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <RadioGroup
        android:id="@+id/radioGroup_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/radioButton_added"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/recently_added"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

        <RadioButton
            android:id="@+id/radioButton_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/category"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

        <RadioButton
            android:id="@+id/radioButton_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu" />

    </RadioGroup>
</LinearLayout>